--- a/style.css
+++ b/style.css
@@ -3,3 +3,64 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+
+section#featured-property
+figure,
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section#featured-property
+p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav {
+  text-align: center; 
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+
+figcaption {
+  text-align: center;
+  font-size: small;
+}
+
+p {
+  width: 800px;
+  text-align: center;
+  margin-top: 10;
+}
+
+section#details,
+div {
+  float: left;
+}
+
+div {
+  width: 25%;
+  background-color: red;
+}
+
+section#details,
+p {
+  width: 100%;
+  text-align: center;
+}
+
+section#details,
+a {
+  background-color: red;
+}
